Styles/styles.css
:root {
    --primary-color: #FABC2A;
    --secondary-color: #7c7c7c44;
    --background-color: rgb(252, 249, 246);
    --dark-background-color: #1b0505;
    --text-color-LM: #1C1C1C;
    --text-color-DM: var(--background-color);
    color : var(--text-color-LM);
    background-color: var(--background-color);
    --sidebar-width : 160px;
}

mark {
    background-color: rgba(250, 188, 42, 0.51);
    color: var(--dark-background-color);
    padding: 0.05em 0.1em;
    border-radius: 2px;
}

@media (prefers-color-scheme: dark) {
    :root{
        background-color: var(--dark-background-color); /* Dark background for dark mode */
        color: var(--background-color); /* Light text for dark mode */
    }
    .github-icon {
        content: url('https://img.icons8.com/ios11/512/FFFFFF/github.png');
    }
}

.github-icon {
    width: 24px;
    height: 24px;
    vertical-align: middle;
    margin-right: 4px;
}

h1 {
    font-family: Blackbird, Helvetica, Arial, sans-serif;
    font-size: clamp(25px, 10vw, 70px);
    font-weight: bolder;
}
a {
    text-decoration: none; /* Removes underline */
    color: inherit;        /* Inherits text color from parent */
}

/* cool hover for links*/
.links{
    transition: color 0.3s ease, text-shadow 0.3s ease;
}
.links:hover{
    color: var(--primary-color);
    text-shadow: 0 0 10px var(--primary-color);
}

h2 {
    font-family: Blackbird, Helvetica, Arial, serif;
    font-size: clamp(30px, 5vw, 50px);
}

h3 {
    font-family: Blackbird, Helvetica, Arial, serif;
    font-size: clamp(20px, 3vw, 40px);
}

@font-face {
    font-family: 'Blackbird';
    src: url('Assets/Projekt Blackbird.otf') format('opentype');
  }

html {
    scroll-behavior: smooth;
  }
body,html {
    font-family: Blackbird, Helvetica, Arial, serif;
}

/* Page content. The value of the margin-left property should match the value of the sidebar's width property */
.content {
    margin-left: var(--sidebar-width);
    padding: 1px 16px;
    height: 1000px;
    max-width: 60vw;
    z-index: 20;
  }

p {
    font-size: clamp(15px, 3vw, 25px);
}

/* Sidenav styles */
.sidebar {
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    position: fixed;
    height: 100%;
    overflow: auto;
    justify-content: center;

  }
/*shamelessely stolen from w3schools*/
/* Sidebar links */
.sidebar a {
    font-size: clamp(5px, 3vw, 25px);
    display: flex;
    padding: 16px;
    text-decoration: none;
    color : inherit;
    transition: background 0.3s ease, transform 0.3s ease;
}

/* Links on mouse-over */
.sidebar a:hover:not(.active) {
  background: var(--secondary-color);
    transform: scale(95%);
}

/* On screens that are less than 700px wide, make the sidebar into a topbar */
/* mobile mode */
@media screen and (max-width: 700px) {
    h1 {
        text-align: center;
        margin-top: 75px;
    }
    h2, h3 {
        text-align: center;
    }
    p {
        text-align: center;
    }
    .sidebar {
        display: flex;
        justify-content: center;
        flex-direction: row;
        height: auto;
        /*shamemelessly stolen from clueless Expert*/
        background:linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255,255,255,0));
        backdrop-filter: blur(10px);
        -webkit-backdrop-filter: blur(10px);
        border-radius: 12px;
        border: 1px solid rgba(255, 255, 255, 0.26);
        box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
        margin: 16px;
        margin-top: 75px;
    }
    div.content {
        margin-left: 0;
        max-width: 100vw;
    }
    .horizontal-center {
        display: flex;
        justify-content: center;
        align-items: center;
    }
    #seamus-model {
        display: none;
    }
}

#seamus-model {
    position: fixed;
    bottom: 0;
    left: 0;
    width: var(--sidebar-width);
    height: 30vh;
    max-width: 400px;
    max-height: 400px;
    z-index: 1000; /* force to top */
    opacity: 0;
    animation: fadeIn 2s forwards; /* Fade-in animation */;
}

@keyframes fadeIn {
    from
    {
        opacity: 0;
        transform: scale(0.9) translateY(20px);
    }

    to {
        opacity: 1;
    }
}

#about-me img {
    height: auto;
    display: block;
    margin: 0 auto;
    max-width: 200px;
    border-radius: 12px;
    border: none;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
    z-index: 50;
}

